Fix button font family on Firefox
Firefox renders `input[type=submit]` with the system font family instead
of using the `font-family` rule specified for `body`. We now explicitly
state the `font-family` to use for these inputs, which fixes the issue.

Testing Done:
Without this patch applied, submit/input buttons render using the
system font on Firefox on macOS. With it applied they do not.

Reviewed at https://reviews.reviewboard.org/r/9042/

--- a/reviewboard/static/rb/css/defs.less
+++ b/reviewboard/static/rb/css/defs.less
@@ -1,3 +1,5 @@
+@font-family: Verdana, Arial, Helvetica, Sans-Serif;
+
 /* RB Colors */
 
 @default-text-color: #000000;
