--- a/reviewboard/static/rb/css/pages/base.less
+++ b/reviewboard/static/rb/css/pages/base.less
@@ -17,7 +17,7 @@
 body {
   background-color: #F9F9F9;
   color: @default-text-color;
-  font-family: Verdana, Arial, Helvetica, Sans-Serif;
+  font-family: @font-family;
   font-size: 11px;
   margin: 0;
   padding: 0;
